lab1/Test/L1-A-12-62.output
Error Type B at Line 4
Error Type B at Line 10
Error Type A at Line 21
Error Type B at Line 22
Error Type B at Line 36
Error Type A at Line 42
